# VoiceFlow

./: .gitignore  .pre-commit-config.yaml  DEMO_README.md  PATENT_CLAIMS_MAPPING.md  README.md  check_docs.py  complete_demo.py  pyproject.toml  run_db_visualizer.py  start_backend.bat  start_docker.bat  start_frontend.bat  test_agent_workflow.py  test_agents_voice.py  test_all_endpoints.py  test_api_endpoints.sh  test_rag_pipeline.py
.github/workflows/: ci.yml
FastAPI/: api_signup.sh  api_test.sh  debug_api.py  main.py  voiceflow.db
agent-workflow/: .env.example  .gitignore  app.py  inspect_chroma.py  readme.md  requirements.txt  test_api.py  twilio_media.py
agent-workflow/scripts/: demo_setup_fr_crce.py  update_twilio_webhook.py
agent-workflow/tools/: embedding_query_debug.py  inspect_agent_chroma.py
agent_runner_service/: .env.example  __init__.py  async_runner.py  main.py  models.py
agent_runner_service/tests/: test_api.py
backend/: README.md  docker-compose.yml  init_backend.py  requirements.txt  run.py  sample.txt  test_agent_config.py
backend/backend/: __init__.py  auth.py  chroma_helper.py  init_db.py  main.py  minio_helper.py  models.py  worker.py
backend/scripts/: demo_config.example.json  e2e_demo.py
backend/tests/: integration_test.py
demo_outputs/: 911_emergency_dispatch_transcript.txt  casual_buddy_transcript.txt  salesbot_pro_transcript.txt
document-ingestion/: .env.example  .gitignore  docker-compose.yml  main.py  pytest.ini  readme.md  requirements.txt
document-ingestion/services/: backend_adapter.py  database.py  embedder.py  file_detector.py  ocr_processor.py  summarizer.py  vector_store.py  web_scraper.py  whoosh_index.py
document-ingestion/tests/: test_api.py
document-ingestion/tools/: check_document.py  test_pg_connect_5433.py
n8n/: docker-compose.yml  readme.md  test-agent-query.json  test-pdf.json  test-webhook.json
n8n/scripts/: scraper.js
n8n/workflows/: Runtime Agent Workflow.json
new_backend/: .env.example  .gitignore  README.md  docker-compose.yml  init-postgres.sql  start_all.bat  start_nestjs.bat  test_company_onboarding.py  test_ingestion.py  test_scraping.py
new_backend/express-backend/: .dockerignore  .env.example  Dockerfile  TWILIO_VOICE_README.md  package.json  pnpm-lock.yaml  tsconfig.json
new_backend/ingestion-service/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  package.json  pnpm-lock.yaml  requirements.txt  test_ingestion.py  test_scraper.py
new_backend/nestjs-backend/: Dockerfile  package-lock.json  package.json
new_backend/python-backend/: init_schema.sql  main.py  requirements.txt  start_server.bat
not-required/: start_all_services.bat  stop_all_services.bat
not-required/FastAPI/: .env.example  main.py  readme.md  requirements.txt  reset_api.sh  voiceflow.db
not-required/agent-workflow/: .env.example  app.py  requirements.txt  test_api.py
not-required/agent_runner_service/: .env.example  .gitignore  README.md  db.py  models.py
not-required/backend/: .gitignore  docker-compose.yml  run.py  test_multi_tenant.py
not-required/document-ingestion/: .env.example  .gitignore  main.py  readme.md
not-required/express-backend/: TWILIO_VOICE_README.md  package.json  tsconfig.json
not-required/ingestion-service/: Dockerfile  README.md  main.py
not-required/n8n/: .dockerignore  Dockerfile  readme.md
not-required/nestjs-backend/: package.json
not-required/old-new-backend-files/: .gitignore  setup.bat  start_express.bat  start_fastapi.bat
not-required/rag/: CHROMADB_VERSION_GUIDE.md  Readme.md  package-lock.json  recreate_persistent_db.py
not-required/voiceflow-ai-platform/: README.md  README.prisma.md  package-lock.json  package.json
project/: index.html  package-lock.json  package.json
project/src/: App.tsx
python/: .env.example  Makefile  README.md  docker-compose.yml  init-postgres.sql  make.ps1  requirements.txt
python/backend/: _test_import.py  _test_output.txt  alembic.ini  main.py  requirements.txt
python/frontend/: manage.py
python/tests/: conftest.py  test_auth.py  test_campaign_variables.py  test_compliance.py  (+5 more)
rag/: .gitignore  Readme.md  app.py  app2.py  knowledge_base_setup.py  knowledgebase_setup.py  package.json  server.js  setup_instructions.py  twilio_setup.py
tts-service/: .env.example  Dockerfile  requirements.txt
voiceflow-ai-platform (1)/: .env.example  .gitignore  README.md  middleware.ts  package.json  tailwind.config.js
voiceflow-django/: requirements.txt  test_e2e.py
(+455 files in other folders)
