[project]
name = "voiceflow"
version = "1.0.0"
description = "Multi-tenant AI voice agent platform with RAG, document ingestion, and hybrid search"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    # ── FastAPI Backend ──────────────────────────────────
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.18",
    "redis>=5.2",
    "PyJWT>=2.10",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.28",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "aiofiles>=24.0",

    # ── Document Ingestion Pipeline ──────────────────────
    "docling>=2.0",
    "paddleocr>=3.0",
    "paddlepaddle>=3.0",
    "transformers==4.44.2",
    "sentence-transformers==2.7.0",
    "chromadb>=1.0",
    "opentelemetry-exporter-otlp-proto-grpc~=1.41.0",
    "opentelemetry-proto~=1.41.0",
    "langchain-text-splitters>=0.3",
    "rank-bm25>=0.2",
    "numpy>=1.26,<2.0",

    # ── Document Parsing Fallbacks ───────────────────────
    "python-docx>=1.0",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "Pillow>=10.0",
    "pdfminer.six>=20200101",

    # ── URL Scraping ─────────────────────────────────────
    "trafilatura>=2.0",
    "beautifulsoup4>=4.12",

    # ── TTS (Edge + Chatterbox) ─────────────────────────
    "edge-tts>=6.1",
    "chatterbox-tts>=0.1.2",
    "soundfile>=0.12",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",

    # ── Object Storage ───────────────────────────────────
    "boto3>=1.35",

    # ── Django Frontend ──────────────────────────────────
    "Django>=6.0",
    "django-htmx>=1.27",
    "whitenoise>=6.7",
    # ── Patent Claim Features ────────────────────────────────────
    "twilio>=9.0",
    "cryptography>=44.0",
    "slowapi>=0.1.9",
    "apscheduler>=3.10",
    "psutil>=6.0",]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
